--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,15 @@ jobs:
 
     - name: Run Docker container
       run: docker run -d -p 3000:3000 secure-ci-cd-demo
+
+    # 🔐 SAST Scan with Semgrep
+    - name: Run Semgrep SAST scan
+      run: |
+        pip install semgrep
+        semgrep scan --config=auto .
+
+    # 🛡️ DAST Scan with OWASP ZAP
+    - name: Run OWASP ZAP DAST scan
+      uses: zaproxy/action-full-scan@v0.7.0
+      with:
+        target: 'http://localhost:3000'
