--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,12 @@
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
   sonarqube:
     name: SonarCloud Scan
     runs-on: ubuntu-latest
@@ -16,4 +25,4 @@
       with:
         args: >
           -Dsonar.projectKey=sharanappu_secure-ci-cd-demo
-          -Dsonar.organization=your-sonarcloud-org
+          -Dsonar.organization=sharan
