--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: '18'
 
     - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
+      uses: SonarSource/sonarqube-scan-action@v1.2.0
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
