--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,15 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
 jobs:
   sonarqube:
     name: SonarCloud Scan
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+    - name: Setup Java 17
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
