--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,11 @@
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   sonarqube:
     name: SonarCloud Scan
@@ -15,6 +23,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
+
+    - name: Verify Java Version
+      run: java -version
 
     - name: SonarCloud Scan
       uses: SonarSource/sonarqube-scan-action@v1.2.0
